Add content page.

--- a/web_parameters/templates/new_base.html
+++ b/web_parameters/templates/new_base.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html>
     <head>
         <link rel="stylesheet" type="text/css" href="/static/new_style.css" />
@@ -29,6 +30,8 @@
             <div> <a href='/show_all_users'> Show_all_users </a> </div>
         {% endif %}
         <div> <a href='/registered_user'> Registered </a> </div>
+        <div> <a href='/content'> Content </a> </div>
+        <div> <a href='/upload_file'> Upload file </a> </div>
 
         Tokyo<br>
         </nav>
